--- a/index.html
+++ b/index.html
@@ -1,309 +1,62 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>WordCards</title>
-  <style>
-    :root {
-      --bg-color: #f0f0f0;
-      --text-color: #000;
-      --card-bg: #fff;
-      --highlight-bg: #dff0d8;
-      --button-bg: #4a90e2;
-    }
-
-    body.dark {
-      --bg-color: #121212;
-      --text-color: #eee;
-      --card-bg: #1e1e1e;
-      --highlight-bg: #2c3e50;
-      --button-bg: #007aff;
-    }
-
-    body {
-      font-family: sans-serif;
-      margin: 0;
-      padding: 0;
-      background: var(--bg-color);
-      color: var(--text-color);
-    }
-
-    header {
-      background: var(--button-bg);
-      color: white;
-      padding: 1rem;
-      text-align: center;
-    }
-
-    .container {
-      padding: 1rem;
-    }
-
-    h2 {
-      margin-top: 2rem;
-    }
-
-    input, textarea, select, button {
-      width: 100%;
-      padding: 0.5rem;
-      margin: 0.5rem 0;
-      font-size: 1rem;
-      background: var(--card-bg);
-      color: var(--text-color);
-      border: 1px solid #ccc;
-    }
-
-    .deck {
-      background: var(--card-bg);
-      padding: 1rem;
-      margin: 0.5rem 0;
-      border-radius: 8px;
-      cursor: pointer;
-      box-shadow: 0 1px 2px rgba(0,0,0,0.1);
-      position: relative;
-    }
-
-    .delete-btn {
-      position: absolute;
-      top: 8px;
-      right: 10px;
-      color: red;
-      font-weight: bold;
-      background: transparent;
-      border: none;
-      font-size: 1.2rem;
-      cursor: pointer;
-    }
-
-    .flashcard {
-      background: var(--card-bg);
-      padding: 2rem;
-      margin-top: 1rem;
-      border-radius: 8px;
-      text-align: center;
-      font-size: 1.5rem;
-      box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-    }
-
-    .flashcard.flipped {
-      background: var(--highlight-bg);
-    }
-
-    .actions {
-      display: flex;
-      justify-content: space-between;
-      margin-top: 1rem;
-    }
-
-    .actions button {
-      width: 48%;
-    }
-
-    .back-btn {
-      margin-top: 1rem;
-      text-align: center;
-    }
-
-    .back-btn button {
-      background: #ccc;
-    }
-
-    #csvFile {
-      margin: 0.5rem 0;
-    }
-
-    .toggle-container {
-      display: flex;
-      justify-content: center;
-      margin: 1rem 0;
-    }
-
-    .toggle-container label {
-      display: flex;
-      align-items: center;
-      gap: 0.5rem;
-    }
-  </style>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Bruno's Word Cards</title>
+    <link rel="stylesheet" href="style.css" />
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header>
-    <h1>WordCards</h1>
-  </header>
-  <div class="toggle-container">
-    <label>
-      <input type="checkbox" id="darkToggle" onchange="toggleDarkMode()">
-      Dark Mode
-    </label>
-  </div>
-  <div class="container" id="app"></div>
+    <div class="header">
+        <h1>Bruno's Word Cards</h1>
+        <label class="switch">
+            <input type="checkbox" id="theme-toggle">
+            <span class="slider round"></span>
+        </label>
+    </div>
 
-  <script>
-    let decks = JSON.parse(localStorage.getItem('decks') || '[]');
-    let currentDeck = null;
-    let currentIndex = 0;
-    let showingFront = true;
+    <div class="tiles">
+        <div class="tile" onclick="navigateTo('practice')">Practice</div>
+        <div class="tile" onclick="navigateTo('editor')">Deck Editor</div>
+    </div>
 
-    const app = document.getElementById('app');
+    <div id="practice" class="view hidden">
+        <div class="nav" onclick="navigateTo('home')">← Return to Homescreen</div>
+        <div id="practice-list" class="deck-list"></div>
+    </div>
 
-    // Load dark mode preference
-    if (localStorage.getItem('darkMode') === 'true') {
-      document.body.classList.add('dark');
-      document.getElementById('darkToggle').checked = true;
-    }
-
-    function toggleDarkMode() {
-      const isDark = document.getElementById('darkToggle').checked;
-      document.body.classList.toggle('dark', isDark);
-      localStorage.setItem('darkMode', isDark);
-    }
-
-    function saveDecks() {
-      localStorage.setItem('decks', JSON.stringify(decks));
-    }
-
-    function renderHome() {
-      app.innerHTML = `
-        <h2>Your Decks</h2>
-        ${decks.map((deck, i) => `
-          <div class="deck" onclick="openDeck(${i})">
-            ${deck.name} (${deck.cards.length} cards)
-            <button class="delete-btn" onclick="event.stopPropagation(); confirmDelete(${i})">×</button>
-          </div>
-        `).join('')}
-        <h2>Create New Deck</h2>
-        <input type="text" id="deckName" placeholder="Deck name">
-        <button onclick="createDeck()">Create Deck</button>
-
-        <h2>Import Deck (.csv)</h2>
-        <input type="file" id="csvFile" accept=".csv">
-        <input type="text" id="importDeckName" placeholder="Deck name for import">
-        <button onclick="importCSV()">Import CSV</button>
-      `;
-    }
-
-    function confirmDelete(index) {
-      if (confirm("Are you sure you want to delete this?")) {
-        decks.splice(index, 1);
-        saveDecks();
-        renderHome();
-      }
-    }
-
-    function createDeck() {
-      const name = document.getElementById('deckName').value.trim();
-      if (!name) return alert("Please enter a deck name.");
-      decks.push({ name, cards: [] });
-      saveDecks();
-      renderHome();
-    }
-
-    function openDeck(index) {
-      currentDeck = decks[index];
-      currentIndex = 0;
-      showingFront = true;
-      renderDeckView();
-    }
-
-    function renderDeckView() {
-      const card = currentDeck.cards[currentIndex];
-      app.innerHTML = `
-        <h2>${currentDeck.name}</h2>
-        ${card ? `
-          <div class="flashcard ${!showingFront ? 'flipped' : ''}" onclick="flipCard()">
-            ${showingFront ? card.front : card.back}
-          </div>
-          <div class="actions">
-            <button onclick="prevCard()">Prev</button>
-            <button onclick="nextCard()">Next</button>
-          </div>
-        ` : `<p>No cards yet.</p>`}
-
-        <h3>Add Card</h3>
-        <input type="text" id="front" placeholder="Front (word)">
-        <input type="text" id="back" placeholder="Back (definition)">
-        <button onclick="addCard()">Add</button>
-
-        <h3>Export Deck</h3>
-        <button onclick="exportCSV()">Export to CSV</button>
-
-        <div class="back-btn">
-          <button onclick="renderHome()">← Back to Decks</button>
+    <div id="editor" class="view hidden">
+        <div class="nav" onclick="navigateTo('home')">← Return to Homescreen</div>
+        <div id="editor-list" class="deck-list"></div>
+        <div class="deck-controls">
+            <input type="file" id="import-file" accept=".csv"/>
+            <button onclick="importDeck()">Import Deck</button>
+            <button onclick="exportAllDecks()">Export All Decks</button>
         </div>
-      `;
-    }
+    </div>
 
-    function addCard() {
-      const front = document.getElementById('front').value.trim();
-      const back = document.getElementById('back').value.trim();
-      if (!front || !back) return alert("Fill both sides of the card.");
-      currentDeck.cards.push({ front, back });
-      saveDecks();
-      renderDeckView();
-    }
+    <div id="card-view" class="view hidden">
+        <div class="nav" onclick="navigateTo('practice')">← Return to Menu</div>
+        <div class="card-container">
+            <div id="card" class="card" onclick="flipCard()"></div>
+        </div>
+        <div class="card-controls">
+            <button onclick="prevCard()">Previous</button>
+            <button onclick="nextCard()">Next</button>
+        </div>
+    </div>
 
-    function flipCard() {
-      showingFront = !showingFront;
-      renderDeckView();
-    }
+    <div id="edit-view" class="view hidden">
+        <div class="nav" onclick="navigateTo('editor')">← Return to Menu</div>
+        <div id="edit-cards" class="card-list"></div>
+        <div class="add-card">
+            <input id="front-input" placeholder="Front"/>
+            <input id="back-input" placeholder="Back"/>
+            <button onclick="addCard()">Add Card</button>
+        </div>
+    </div>
 
-    function prevCard() {
-      if (currentIndex > 0) currentIndex--;
-      showingFront = true;
-      renderDeckView();
-    }
-
-    function nextCard() {
-      if (currentIndex < currentDeck.cards.length - 1) currentIndex++;
-      showingFront = true;
-      renderDeckView();
-    }
-
-    function importCSV() {
-      const fileInput = document.getElementById('csvFile');
-      const deckName = document.getElementById('importDeckName').value.trim();
-      if (!fileInput.files.length || !deckName) {
-        alert("Please select a file and enter a deck name.");
-        return;
-      }
-
-      const file = fileInput.files[0];
-      const reader = new FileReader();
-      reader.onload = function (e) {
-        const lines = e.target.result.split(/\r?\n/);
-        const cards = lines.map(line => {
-          const [front, back] = line.split(',');
-          return front && back ? { front: front.trim(), back: back.trim() } : null;
-        }).filter(Boolean);
-        if (cards.length === 0) return alert("No valid cards found in CSV.");
-        decks.push({ name: deckName, cards });
-        saveDecks();
-        renderHome();
-      };
-      reader.readAsText(file);
-    }
-
-    function exportCSV() {
-      if (!currentDeck || !currentDeck.cards.length) {
-        alert("No cards to export.");
-        return;
-      }
-
-      const csvContent = currentDeck.cards.map(card =>
-        `${card.front},${card.back}`
-      ).join('\n');
-
-      const blob = new Blob([csvContent], { type: "text/csv" });
-      const url = URL.createObjectURL(blob);
-      const a = document.createElement("a");
-      a.href = url;
-      a.download = `${currentDeck.name}.csv`;
-      a.click();
-      URL.revokeObjectURL(url);
-    }
-
-    renderHome();
-  </script>
+    <script src="script.js"></script>
 </body>
 </html>
